# chessbuddy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE_NOTES.md  chessbuddy.opam  docker-compose.yml  dune-project
.github/workflows/: ci.yml
benchmark/: README.md  benchmark.ml  dune
dev-tools.locks/ocaml-lsp-server/: lock.dune
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CHESS_ENGINE_STATUS.md  CHESS_LIBRARY_EVALUATION.md  DEVELOPER.md  GUIDELINES.md  IMPLEMENTATION_PLAN.md  OCAML_AI_ASSISTANT_GUIDE.md  OPERATIONS.md
dune.lock/: alcotest-lwt.pkg  caqti-driver-postgresql.pkg  lock.dune
lib/: chess_engine.ml  chess_engine.mli  chessbuddy.ml  database.ml  database.mli  dune  embedder.ml  embedder.mli  env_loader.ml  env_loader.mli  fen_generator.ml  fen_generator.mli  ingest_cli.ml  ingestion_pipeline.ml  ingestion_pipeline.ml.bak  ingestion_pipeline.mli  openai_client.mli  pgn_source.ml  pgn_source.mli  retrieve_cli.ml  search_embedder.ml  search_embedder.mli  search_indexer.mli  search_service.ml  search_service.mli  types.ml  types.mli
lib/chess/: chess_engine.ml  chess_engine.mli  fen_generator.ml  fen_generator.mli  pawn_structure.ml  pawn_structure.mli  pgn_source.ml
lib/embedding/: embedder.ml  embedder.mli  openai_client.ml
lib/ingestion/: ingestion_pipeline.ml
lib/patterns/: endgame_patterns.ml  pattern_detector.ml  pattern_detector.mli  patterns.ml  strategic_patterns.ml  tactical_patterns.ml
lib/persistence/: database.ml  database.mli
lib/search/: search_indexer.ml  search_service.ml
sql/: schema.sql
sql/migrations/: 001_pattern_framework.sql
test/: dune  test_chess_engine.ml  test_database.ml  test_helpers.ml  test_ingest_cli.ml  test_pattern_detectors.ml  test_pgn_source.ml  test_retrieve_cli.ml  test_search_service.ml  test_suite.ml  test_vector.ml
test/fixtures/patterns/: greek_gift_negative.pgn  greek_gift_positive.pgn  lucena_negative.pgn  lucena_positive.pgn  minority_attack_negative.pgn  minority_attack_positive.pgn  queenside_majority_negative.pgn  queenside_majority_positive.pgn
