(data_only_dirs fixtures)

(test
 (name test_suite)
 (modules
  test_suite
  test_helpers
  test_database
  test_vector
  test_pgn_source
  test_search_service
  test_retrieve_cli
  test_ingest_cli
  test_chess_engine
  test_pattern_detectors)
 (libraries
  chessbuddy.core
  chessbuddy.retrieve_cli
  chessbuddy.ingest_cli
  cmdliner
  alcotest
  alcotest-lwt
  lwt
  lwt.unix
  caqti
  caqti-lwt
  caqti-driver-postgresql
  ptime)
 (preprocess
  (pps lwt_ppx)))
